modules/gdscript/tests/scripts/parser/errors/struct_no_colon.gd
struct Test
    var oops

func test():
    pass
